Adding New Changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Joe - Home Page</title>
+    <title>Portfolio - Joe</title>
     <meta name="description" content="Your Description Here">
     <meta name="keywords"
         content="free boostrap, bootstrap template, freebies, free theme, free website, free portfolio theme, portfolio, personal, cv">
@@ -100,12 +100,10 @@
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2">
                     <div class="section-title">
-                        <h2>Meet Us</h2>
+                        <h2>Video Introduction</h2>
                         <hr>
                     </div>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-                        deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
-                        provident.</p>
+                    <p>Here, i mentioned my video introduction video and here..</p>
                     <a href="#services" class="down-btn page-scroll">
                         <span class="fa fa-angle-down"></span>
                     </a>
@@ -416,7 +414,7 @@
                                 <img src="img/team/skills.png" class="img-responsive img-circle" alt="...">
                                 <br>
                                 <h4>About My Skills</h4>
-                                <a href="#">
+                                <a href="#" data-target="#Modal_skills" data-toggle="modal">
                                     <p class="small">Click Here..</p>
                                 </a>
                                 <hr>
@@ -436,25 +434,32 @@
                     </div>
                 </div>
 
-                <!-- Modal -->
-                <div class="modal fade-scale" id="career" tabindex="-1" role="dialog" aria-labelledby="careerLabel" style="display: none;">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                        aria-hidden="true">&times;</span></button>
-                                <h4 class="modal-title" id="careerLabel">Modal title</h4>
-                            </div>
-                            <div class="modal-body">
-                                ...
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
-                            </div>
-                        </div>
+                <!-- Skills Modal -->
+
+                <div class="modal fade" id="Modal_skills" tabindex="-1" role="dialog" aria-labelledby="modalLabel_3"
+            aria-hidden="true" style="display: none;">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title" id="modalLabel_3">About My Skills</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div id="canvas-holder" style="width:40%">
+                            <canvas id="chart-area" />
+                          </div>
+
+                        
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <!-- <button type="button" class="btn btn-success">Some action</button> -->
                     </div>
                 </div>
+            </div>
+        </div>
 
             </div>
 
@@ -526,9 +531,9 @@
                         Coimbatore - 641662<br>
                         Phone: (+91) 9655613776, 9659593776
                         <ul class="social">
-                            <li><a href="facebook.com/ratr.sakthi"><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#"><span class="">In</span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                            <li><a href="https://facebook.com/ratr.sakthi"><span class="fa fa-facebook"></span></a></li>
+                            <li><a href="https://linkedin.com/in/shakti-a-b5048092/"><span class=""><b>In</b></span></a></li>
+                            <li><a href="https://twitter.com/Joe_fl1"><span class="fa fa-twitter"></span></a></li>
                             <li><a href="#"><span class="fa fa-dribbble"></span></a></li>
                         </ul>
                     </address>
@@ -571,6 +576,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/SmoothScroll.js"></script>
@@ -581,7 +587,7 @@
     <script>
         $(function () {
             $("#head-title").typed({
-                strings: ["I am a Front End Developer^1000", "I Can make websites^1000", "24/7 available for hire me^1000", "Web design with diffence^1000"],
+                strings: ["I am a Front End Developer^1000", "I can make websites user friendly^1000", "24/7 available for hire me^1000", "Web design with diffence^1000"],
                 typeSpeed: 100,
                 loop: true,
                 startDelay: 100
