--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <!-- Basic Page Needs
+    <!-- Starts
     ================================================== -->
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
@@ -42,7 +42,6 @@
     <script type="text/javascript" src="js/modernizr.custom.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -51,7 +50,7 @@
 
 <body>
 
-    <!-- Off Canvas Navigation
+    <!-- Off Navigation
     ================================================== -->
     <div class="navmenu navmenu-default navmenu-fixed-left offcanvas">
         <!--- Off Canvas Side Menu -->
@@ -62,7 +61,6 @@
         <ul class="nav navmenu-nav">
             <!--- Menu -->
             <li><a href="#home" class="page-scroll">Home</a></li>
-            <li><a href="#meet-us" class="page-scroll">Video Introduction</a></li>
             <li><a href="#services" class="page-scroll">Experience & Services</a></li>
             <li><a href="#works" class="page-scroll">Latest Projects</a></li>
             <li><a href="#about-us" class="page-scroll">About Me</a></li>
@@ -108,17 +106,6 @@
                         <span class="fa fa-angle-down"></span>
                     </a>
                 </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Overview Video Section -->
-    <div id="overview-video">
-        <div class="overlay">
-            <div class="container">
-                <a href="#">
-                    <span class="fa fa-play"></span>
-                </a>
             </div>
         </div>
     </div>
